# income-tax

./: .codespellrc  CHANGELOG.md  Cargo.toml  Justfile  README.md
.github/workflows/: rust.yml
src/: germany.rs  lib.rs
